Crash under WebProcessPool::networkProcessFailedToLaunch(): https://bugs.webkit.org/show_bug.cgi?id=186784 <rdar://problem/33535377>

Reviewed by Brady Eidson.

Source/WebKit:

* UIProcess/API/Cocoa/WKProcessPool.mm:
(+[WKProcessPool _allProcessPoolsForTesting]):
Add SPI to retrieve all WebProcessPool for testing purposes.

* UIProcess/API/Cocoa/WKProcessPoolPrivate.h:
* UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::clearCallbackStates):
Make iteration over completion handlers robust against completion handlers
getting removed while we iterate.

(WebKit::NetworkProcessProxy::didClose):
Ref the WebProcessPool (which keeps the NetworkProcessProxy alive too)
as several calls within this method might cause the WebProcessPool /
NetworkProcessProxy to get destroyed.

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:
(TEST):

Canonical link: https://commits.webkit.org/202051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232948 268f45cc-cd09-0410-ab3c-d52691b4dbfc