Source/WebKit/UIProcess/API/Cocoa/WKProcessPoolPrivate.h
@@ -42,6 +42,8 @@
 
 + (WKProcessPool *)_sharedProcessPool;
 
++ (NSArray<WKProcessPool *> *)_allProcessPoolsForTesting WK_API_AVAILABLE(macosx(WK_MAC_TBA), ios(WK_IOS_TBA));
+
 @property (nonatomic, readonly) _WKProcessPoolConfiguration *_configuration;
 
 - (void)_setAllowsSpecificHTTPSCertificate:(NSArray *)certificateChain forHost:(NSString *)host;
